syntax = "proto3";
package ccmsg;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// ------------------------
// Publisher<->Cache protocol
// ------------------------

service PublisherCache {
    rpc OfferEscrow(EscrowOfferRequest) returns (EscrowOfferResponse) {}
    rpc PingCache(PingCacheRequest) returns (PingCacheResponse) {}
}

message EscrowOfferRequest {
    bytes escrow_id = 1;

    bytes inner_master_key = 2;
    bytes outer_master_key = 3;

    uint64 slots = 4;
    string publisher_addr = 5;

    uint64 start_block = 6;
    uint64 end_block = 7;

    bytes public_key = 8;
    bytes private_key = 9;
}

// XXX: return a response or error if we reject the escrow?
message EscrowOfferResponse {
}

message PingCacheRequest {
}

message PingCacheResponse {
}

