syntax = "proto3";

package metrics;

import "google/protobuf/empty.proto";

// LogData is the data to be shipped over the wire
message Scrape {
  bytes data = 1;
}

service Metrics {
// MetricsPoller polls for metrics from the datacentre out to clients
// Clients establish a connection and then send one scrape in protobuf
// format each time the server sends a poll request
  rpc MetricsPoller(stream Scrape) returns (stream google.protobuf.Empty) {};
}
